--- a/res/xml/trust_preferences.xml
+++ b/res/xml/trust_preferences.xml
@@ -46,7 +46,8 @@
             android:defaultValue="false" />
 
         <org.lineageos.internal.lineageparts.LineagePartsPreference
-            android:key="lineagestats" />
+            android:key="lineagestats"
+            android:icon="@drawable/ic_counter" />
 
         <ListPreference
             android:key="sms_security_check_limit"
