--- a/res/xml/trust_preferences.xml
+++ b/res/xml/trust_preferences.xml
@@ -47,8 +47,7 @@
             android:defaultValue="false" />
 
         <org.lineageos.internal.lineageparts.LineagePartsPreference
-            android:key="lineagestats"
-            android:icon="@drawable/ic_counter" />
+            android:key="lineagestats" />
 
         <ListPreference
             android:key="sms_security_check_limit"
